platform/stack/packages/observability/pyroscope/manifests/install.yaml
# PYROSCOPE INSTALL RESOURCES
# This file is auto-generated with 'platform/stack/packages/observability/pyroscope/generate-manifests.sh'
---
# Source: pyroscope/templates/memberlist-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyroscope-memberlist
  namespace: adhar-system
  labels:
    helm.sh/chart: pyroscope-2.2.1
    app.kubernetes.io/name: pyroscope
    app.kubernetes.io/instance: pyroscope
    app.kubernetes.io/version: "2.2.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: memberlist
      port: 7946
      protocol: TCP
      targetPort: 7946
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: pyroscope
    app.kubernetes.io/instance: pyroscope
    # TODO: Ensure only services that offer memberlist register
    # pyroscope.grafana.com/memberlist: "true"
---
# Source: pyroscope/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyroscope
  namespace: adhar-system
  labels:
    helm.sh/chart: pyroscope-2.2.1
    app.kubernetes.io/name: pyroscope
    app.kubernetes.io/instance: pyroscope
    app.kubernetes.io/version: "2.2.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: "all"
spec:
  type: ClusterIP
  ports:
    - port: 4040
      targetPort: http2
      protocol: TCP
      name: http2
    - port: 9095
      targetPort: grpc
      protocol: TCP
      name: grpc
    - port: 9099
      targetPort: raft
      protocol: TCP
      name: raft
  selector:
    app.kubernetes.io/name: pyroscope
    app.kubernetes.io/instance: pyroscope
    app.kubernetes.io/component: "all"
---
# Source: pyroscope/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyroscope-headless
  namespace: adhar-system
  labels:
    helm.sh/chart: pyroscope-2.2.1
    app.kubernetes.io/name: pyroscope
    app.kubernetes.io/instance: pyroscope
    app.kubernetes.io/version: "2.2.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: "all"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 4040
      targetPort: http2
      protocol: TCP
      name: http2
    - port: 9095
      targetPort: grpc
      protocol: TCP
      name: grpc
    - port: 9099
      targetPort: raft
      protocol: TCP
      name: raft
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: pyroscope
    app.kubernetes.io/instance: pyroscope
    app.kubernetes.io/component: "all"
---
# Source: pyroscope/templates/deployments-statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pyroscope
  namespace: adhar-system
  labels:
    helm.sh/chart: pyroscope-2.2.1
    app.kubernetes.io/name: pyroscope
    app.kubernetes.io/instance: pyroscope
    app.kubernetes.io/version: "2.2.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: "all"
spec:
  serviceName: pyroscope-headless
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pyroscope
      app.kubernetes.io/instance: pyroscope
      app.kubernetes.io/component: "all"
  template:
    metadata:
      annotations:
        checksum/config: ece059f0571ef0ddc29bade1f635427e247f1d04d1ae3bd51ed2002a50b2de6e
        profiles.grafana.com/service_repository: "https://github.com/grafana/pyroscope"
        profiles.grafana.com/service_git_ref: "v2.2.1"
        profiles.grafana.com/cpu.port_name: http2
        profiles.grafana.com/cpu.scrape: "true"
        profiles.grafana.com/goroutine.port_name: http2
        profiles.grafana.com/goroutine.scrape: "true"
        profiles.grafana.com/memory.port_name: http2
        profiles.grafana.com/memory.scrape: "true"
      labels:
        app.kubernetes.io/name: pyroscope
        app.kubernetes.io/instance: pyroscope
        app.kubernetes.io/component: "all"
        name: "pyroscope"
    spec:
      serviceAccountName: pyroscope
      securityContext:
        fsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      dnsPolicy: ClusterFirst
      containers:
        - name: "pyroscope"
          securityContext:
            {}
          image: "grafana/pyroscope:2.2.1"
          imagePullPolicy: IfNotPresent
          args:
            - "-target=all"
            - "-self-profiling.disable-push=true"
            - "-server.http-listen-port=4040"
            - "-memberlist.cluster-label=adhar-system-pyroscope"
            - "-memberlist.join=dns+pyroscope-memberlist.adhar-system.svc.cluster.local.:7946"
            - "-config.file=/etc/pyroscope/config.yaml"
            - "-runtime-config.file=/etc/pyroscope/overrides/overrides.yaml"
            - "-log.level=debug"
            - "-storage.backend=filesystem"
            - "-query-backend.address=dns:///_grpc._tcp.pyroscope-headless.$(NAMESPACE_FQDN):9095"
            - "-metastore.address=kubernetes:///pyroscope-headless.$(NAMESPACE_FQDN):9095"
            - "-metastore.data-dir=./data-metastore/data"
            - "-metastore.raft.dir=./data-metastore/raft"
            - "-metastore.raft.snapshots-dir=./data-metastore/raft"
            - "-metastore.raft.bind-address=:9099"
            - "-metastore.raft.server-id=$(POD_NAME).$(PYROSCOPE_METASTORE_SERVICE)"
            - "-metastore.raft.advertise-address=$(POD_NAME).$(PYROSCOPE_METASTORE_SERVICE)"
            - "-metastore.raft.bootstrap-peers=dnssrvnoa+_raft._tcp.$(PYROSCOPE_METASTORE_SERVICE)"
            - "-architecture.storage=v2"
          ports:
            - name: http2
              containerPort: 4040
              protocol: TCP
            - name: memberlist
              containerPort: 7946
              protocol: TCP
            - name: grpc
              containerPort: 9095
              protocol: TCP
            - name: raft
              containerPort: 9099
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: http2
              scheme: HTTP
          volumeMounts:
            - name: config
              mountPath: /etc/pyroscope/config.yaml
              subPath: config.yaml
            - name: overrides-config
              mountPath: /etc/pyroscope/overrides/
            - name: data
              mountPath: /data
            - name: data
              mountPath: /data-metastore
              subPath: .metastore
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: pyroscope-config
        - name: overrides-config
          configMap:
            name: pyroscope-overrides-config
        - name: data
          emptyDir: {}
